--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="Card">
         <div class="search">
-            <input type="text" placeholder="Enter name of city" spellcheck="false"
+            <input id="it-asked" type="text" placeholder="Enter name of city" spellcheck="false"
                 style="text-align: center; font-size: 30px;">
             <button><img src="../images/search.png" alt=""></button>
         </div>
@@ -26,6 +26,7 @@
             <img src="../images/clouds.png" alt="" class="weather-icon">
             <h1 class="temp">22*c</h1>
             <h2 class="city">New Delhi</h2>
+            <h4 class="word">cloudy</h4>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png" alt="">
@@ -47,8 +48,9 @@
     </div>
 
     <script>
+        //note: api may not be activiated when you are viewing this, there is some issue with that
         const apiKey = "818740ae9c6213da768514dba4ac5525";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
         const searchBox = document.querySelector(".search input");
         const searchBtn = document.querySelector(".search button");
@@ -58,38 +60,41 @@
 
             const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
             var data = await response.json();
+            // chennai
+            console.log(data.weather[0].main);
             if (response.status == 404) {
                 document.querySelector(".error").style.display = "block";
                 document.querySelector(".weather").style.display = "none";
             }
             else {
                 document.querySelector(".city").innerHTML = data.name;
-                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "*c";
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+                document.querySelector(".word").innerHTML = data.weather[0].main;
                 document.querySelector(".humidity").innerHTML = data.main.humidity + " %";
                 document.querySelector(".wind").innerHTML = data.wind.speed + " kmph";
                 if (data.weather[0].main == "Clouds") {
-                    weatherIcon.src = "images/clouds.png";
-                    document.body.style.backgroundImage = `url('${"images/cloudy-sky-bg.jpg"}')`;
+                    weatherIcon.src = "./images/clouds.png";
+                    document.body.style.backgroundImage = `url("./images/cloudy-sky-bg.jpg")`;
                 }
                 else if (data.weather[0].main == "Clear") {
-                    weatherIcon.src = "images/clear.png";
-                    document.body.style.backgroundImage = `url('${"images/clear-sky-bg.jpg"}')`;
+                    weatherIcon.src = "./images/clear.png";
+                    document.body.style.backgroundImage = `url("./images/clear-sky-bg.jpg")`;
                 }
                 else if (data.weather[0].main == "Rain") {
-                    weatherIcon.src = "images/rain.png";
-                    document.body.style.backgroundImage = `url('${"images/rain-bg.jpg"}')`;
+                    weatherIcon.src = "./images/rain.png";
+                    document.body.style.backgroundImage = `url("./images/rain-bg.jpg")`;
                 }
                 else if (data.weather[0].main == "Drizzle") {
-                    weatherIcon.src = "images/drizzle.png";
-                    document.body.style.backgroundImage = `url('${"images/drizzle-bg.jpg"}')`;
+                    weatherIcon.src = "./images/drizzle.png";
+                    document.body.style.backgroundImage = `url("./images/drizzle-bg.jpg")`;
                 }
                 else if (data.weather[0].main == "Mist") {
-                    weatherIcon.src = "images/clear.png";
-                    document.body.style.backgroundImage = `url('${"images/mist-bg.jpg"}')`;
+                    weatherIcon.src = "./images/mist.png";
+                    document.body.style.backgroundImage = `url("./images/mist-bg.jpg")`;
                 }
                 document.querySelector(".weather").style.display = "block";
                 document.querySelector(".error").style.display = "none";
-                document.body.style.backgroundImage = `url('${"images/main-bg.jpg"}')`;
+                // document.body.style.backgroundImage = `url("images/main-bg.jpg")`;
             }
         }
 
